Prevent text-input resizing on hover; visual fixes to slider; change colour on scrollbar

--- a/Frontend/src/assets/stylesheets/global.css
+++ b/Frontend/src/assets/stylesheets/global.css
@@ -39,7 +39,7 @@ html, body {
 }
 
 ::-webkit-scrollbar-thumb {
-  background: var(--main);
+  background: var(--accent);
   border-radius: 10px;
 }
 
